--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -9,11 +9,30 @@
   html{
     font-family: 'Clicker Script', cursive !important;
   }
+  body{
+    background-color:#000000 !important;
+    color:#E4E4E4 !important;
+  }
   #contenido {
-    width: 50%;
-    margin: 0 auto;
+    width: 70%;
+    margin: 1% 14%;
+
   }
   @mixin default_font {
   font-family: 'Clicker Script', "Lucida Grande", sans-serif;
   font-weight: 400;
+  }
+  #elemento {
+  margin: calc();
+  padding: 5px;
+
+  }
+  #parrilla {
+    width: 100%;
+    border: 5px solid #000;
+    padding: 2%;
+  }
+  #myCarousel {
+    width: 60%;
+    margin: 0 auto;
   }
