--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -4,7 +4,6 @@
     %article
       %h2 Desarrollo Web
     %article
-
       #myCarousel.carousel.slide
         %ol.carousel-indicators
           %li.active{"data-slide-to" => "0", "data-target" => "#myCarousel"}
@@ -19,9 +18,19 @@
           .item= image_tag("fototres.jpg", height: '32px')
           .item= image_tag("fotocuatro.jpg", height: '32px')
           .item= image_tag("fotocinco.jpg", height: '32px' )
-
         / Carousel nav
         %a.carousel-control.left{"data-slide" => "prev", :href => "#myCarousel"} &lsaquo;
         %a.carousel-control.right{"data-slide" => "next", :href => "#myCarousel"} &rsaquo;
       %p lñ´sdg´ñldfs´ñlsl´ñslksldf sdflgksldñkg´sñdlfkg sdlñfg ksdf gs fdglñskdf lgskd´fl kgs´ldñfg s´ñdf´sñf g´ñld fgs kfg´ñlg´lgfgkñlsdfkgs´ñlfkgsñlfksñgkslñ
+      .row-fluid#parrilla
+        .span3#elemento
+          = image_tag("fotodos.jpg", height: '100px')
+        .span3#elemento
+          = image_tag("fotodos.jpg", height: '100px')
+        .span3#elemento
+          = image_tag("fotodos.jpg", height: '100px')
+        .span3#elemento
+          = image_tag("fotodos.jpg", height: '100px')
+
+
 
