--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,8 @@
           / For all other devices
           / Size should be 32 x 32 pixels
           = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
-          %link{:href => "http://fonts.googleapis.com/css?family=Clicker+Script", :rel => "stylesheet", :type => "text/css"}/
+          %link{:href => "http://fonts.googleapis.com/css?family=Irish+Grover", :rel => "stylesheet", :type => "text/css"}/
+
 
   %body
     /= render 'layouts/header'
