--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,19 +30,7 @@
 
   %body
     /= render 'layouts/header'
-    .container-fluid
-      .row-fluid
-        .span8#contenido
-          = bootstrap_flash
-          = yield
-        .span3
-          /= render 'layouts/sidebar'
-
-
-
-
-      %footer
-        %p &copy; Pepetox 2013
-
-
+    = yield
+    /%footer
+    / = render 'layouts/footer'
     = javascript_include_tag "application"
